# Welfare-MCP

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  mcp_container.py  pyproject.toml
.github/workflows/: mcp.yaml
backend/dto/: assets_dto.py
backend/dto/request/: CollectAssetProfileReqeustDto.py  CollectHouseHoldProfileRequestDto.py
backend/entity/: EligibilityResult.py
batch/: DB_Connection.py  Dockerfile  batch.py  fetch_page.py  field_mapping.py  main.py  normalize_with_claude.py  parse_welfare_details.py  requirements.txt
batch/parse/: clean_text.py  get_embedding.py  parse_region.py  parse_target_info.py  parse_welfare_details.py
fastapi/entity/: EligibilityResult.py  UserProfile.py
mcp/resources/: fetch_gov.py  getOpenAPI.py
mcp/tools/: check_eligibility.py  required_documents.py  user_profile.py
normalize/: Dockerfile  normalize_with_claude.py  requirements.txt
welfare-mcp/resources/: fetch_gov.py
welfare-mcp/tools/: user_profile.py
welfare_mcp/: Dockerfile  main.py  mcp_container.py  pyproject.toml  requirements.txt
welfare_mcp/backend/: DB_Connection.py
welfare_mcp/backend/dto/: employment_status_dto.py  house_hold_dto.py  income_level_dto.py  special_status_dto.py
welfare_mcp/backend/entity/: EligibilityResult.py  UserProfile.py
welfare_mcp/backend/repository/: check_eligibility.py
welfare_mcp/prompt/: check_eligibility.py  required_document.py
welfare_mcp/resources/: check_eligibility.py  fetch_gov.py  getOpenAPI.py
welfare_mcp/tools/: check_eligibility.py  required_documents.py  user_profile.py
(+1 files in other folders)
