[project]
name = "mcp_contest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "mcp[cli]>=1.25.0",
    "numpy>=2.4.1",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "tenacity>=9.1.2",
]
